--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,10 +1,10 @@
-$primary: #81899b;
-$accent: #302e24;
-$warn: #dfa612;
+$color-primary: #81899b;
+$color-accent: #302e24;
+$color-warn: #dfa612;
 $color-example: #abbcaa;
 
 :root {
-  --primary: #{$primary};
-  --accent: #{$accent};
-  --warn: #{$warn};
+  --color-primary: $color-primary;
+  --color-accent: $color-accent;
+  --color-warn: $color-warn;
 }
