--- a/src/styles/spacing.scss
+++ b/src/styles/spacing.scss
@@ -2,6 +2,7 @@ $spacing-small: 1em;
 $spacing-medium: 2em;
 $spacing-large: 3em;
 
+// Global design tokens with css custom properties
 :root {
   --spacing-small: #{$spacing-small};
   --spacing-medium: #{$spacing-medium};
