adding style to toggle and button with some prettier config

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,27 +1,45 @@
-@import "../../styles/colors.scss";
-@import "../../styles/spacing.scss";
+@import '../../styles/colors.scss';
+@import '../../styles/spacing.scss';
+
+$btn-background-primary: $color-primary;
+$btn-text-color-primary: white;
+
+$btn-background-secondary: $color-secondary;
+$btn-text-color-secondary: black;
 
 .watson-btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: rem(32px);
+  border: 0;
+  width: max-content;
+  border-radius: 4px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   cursor: pointer;
-  padding: $spacing-small $spacing-medium;
 
   &-primary {
-    background-color: $color-primary;
+    background-color: $btn-background-primary;
+    color: $btn-text-color-primary;
   }
 
   &-secondary {
-    background-color: $color-secondary;
+    background-color: $btn-background-secondary;
+    color: $btn-text-color-secondary;
   }
 
   &-small {
-    padding: $spacing-small;
+    padding: $spacing-small $spacing-medium;
   }
 
   &-medium {
-    padding: $spacing-medium;
+    padding: $spacing-medium $spacing-large;
   }
 
   &-large {
-    padding: $spacing-large;
+    padding: $spacing-large $spacing-x-large;
   }
 }
