--- a/src/styles/spacing.scss
+++ b/src/styles/spacing.scss
@@ -1,10 +1,12 @@
 $spacing-small: 1em;
 $spacing-medium: 2em;
 $spacing-large: 3em;
+$spacing-x-large: 4em;
 
 // Global design tokens with css custom properties
 :root {
   --spacing-small: #{$spacing-small};
   --spacing-medium: #{$spacing-medium};
   --spacing-large: #{$spacing-large};
+  --spacing-x-large: #{$spacing-x-large};
 }
