--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -11,87 +11,85 @@ $toggle-btn-background-checked: #3d83df;
 $toggle-btn-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
 
 .watson-toggle {
-  position: relative;
-  display: inline-block;
-  width: 44px;
-  height: 24px;
+  display: flex;
+  align-items: center;
 
-  input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
+  &-switch {
+    position: relative;
+    display: inline-block;
+    width: 44px;
+    height: 24px;
+    margin-right: $spacing-x-small;
 
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: $toggle-background;
-    transition: 0.4s;
-    border-radius: 28px;
-
-    &:before,
-    &:after {
+    span {
       position: absolute;
-      border-radius: 50%;
-      content: '';
-      height: 18px;
-      width: 18px;
-      left: 4px;
-      bottom: 3px;
-      background-color: $toggle-btn-background;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: $toggle-background;
       transition: 0.4s;
-    }
+      border-radius: 28px;
+      pointer-events: none;
 
-    &:after {
-      box-shadow: $toggle-btn-shadow;
-    }
-
-    &:before {
-      background-color: transparent;
-      height: 44px;
-      width: 44px;
-      left: -9px;
-      bottom: -10px;
-    }
-  }
-
-  input {
-    &:checked {
-      & + .slider {
-        background-color: $toggle-background-checked;
-      }
-
-      & + .slider:before,
-      & + .slider:after {
-        transform: translateX(18px);
-      }
-
-      &:disabled + .slider {
-        background-color: $toggle-background-disabled;
+      // We could remove &:after but the shadows is less remarkable
+      &:before,
+      &:after {
+        position: absolute;
+        content: '';
+        height: 18px;
+        width: 18px;
+        left: 4px;
+        top: 3px;
+        background-color: $toggle-btn-background;
+        transition: 0.4s;
+        border-radius: 50%;
+        box-shadow: $toggle-btn-shadow;
       }
     }
 
-    &:disabled {
-      & + .slider {
-        cursor: not-allowed;
-        background-color: $toggle-background-disabled;
+    input[type='checkbox'] {
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+      margin: 0;
+      outline: none;
+      opacity: 0.01;
+
+      &:checked {
+        & + span {
+          background-color: $toggle-background-checked;
+        }
+
+        & + span:before,
+        & + span:after {
+          transform: translateX(18px);
+        }
+
+        &:disabled + span {
+          background-color: $toggle-background-disabled;
+        }
       }
 
-      & + .slider:after {
-        background-color: $toggle-btn-background-disabled;
-        box-shadow: none;
-      }
+      &:disabled {
+        & + span {
+          cursor: not-allowed;
+          background-color: $toggle-background-disabled;
+        }
 
-      &:disabled + .slider {
-        background-color: $toggle-background-disabled;
-      }
+        & + span:after {
+          background-color: $toggle-btn-background-disabled;
+          box-shadow: none;
+        }
 
-      &:checked + .slider:after {
-        background-color: $toggle-btn-background-disabled;
+        &:disabled + span {
+          background-color: $toggle-background-disabled;
+        }
+
+        &:checked + span:after {
+          background-color: $toggle-btn-background-disabled;
+        }
       }
     }
   }
