--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -1,4 +1,4 @@
-@import "../../styles/spacing.scss";
+@import '../../styles/spacing.scss';
 
 .watson-input {
   display: block;
@@ -9,7 +9,8 @@
   padding-inline-end: calc($spacing-small * 1.5);
 
   &-label {
-    display: inline-block;
+    display: flex;
+    justify-content: flex-start;
     padding-bottom: $spacing-small;
   }
 }
