--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -1,4 +1,4 @@
-@import '../../styles/spacing.scss';
+/* @import '../../styles/spacing.css';
 
 .watson-input {
   display: block;
@@ -13,4 +13,4 @@
     justify-content: flex-start;
     padding-bottom: $spacing-small;
   }
-}
+} */
