--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,11 +1,4 @@
-@import '../../styles/colors.scss';
-@import '../../styles/spacing.scss';
-
-$btn-background-primary: $color-primary;
-$btn-text-color-primary: white;
-
-$btn-background-secondary: $color-secondary;
-$btn-text-color-secondary: black;
+@import '../../css-design-tokens/component/button.css';
 
 .watson-btn {
   font-size: 1rem;
@@ -23,24 +16,24 @@ $btn-text-color-secondary: black;
   cursor: pointer;
 
   &-primary {
-    background-color: $btn-background-primary;
-    color: $btn-text-color-primary;
+    background-color: var(--watson-button-background-primary);
+    color: var(--watson-button-text-primary);
   }
 
   &-secondary {
-    background-color: $btn-background-secondary;
-    color: $btn-text-color-secondary;
+    background-color: var(--watson-button-background-secondary);
+    color: var(--watson-button-text-secondary);
   }
 
   &-small {
-    padding: $spacing-x-small $spacing-small;
+    padding: var(--watson-button-p-xs) var(--watson-button-p-s);
   }
 
   &-medium {
-    padding: $spacing-small $spacing-medium;
+    padding: var(--watson-button-p-s) var(--watson-button-p-m);
   }
 
   &-large {
-    padding: $spacing-small $spacing-large;
+    padding: var(--watson-button-p-s) var(--watson-button-p-l);
   }
 }
