--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -1,4 +1,4 @@
-@import '../../styles/spacing.scss';
+/* @import '../../styles/spacing.css';
 
 $toggle-background: #98a1ab;
 $toggle-background-disabled: #dcdfe3;
@@ -94,3 +94,4 @@ $toggle-btn-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
     }
   }
 }
+ */
