--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -1,14 +1,4 @@
-/* @import '../../styles/spacing.css';
-
-$toggle-background: #98a1ab;
-$toggle-background-disabled: #dcdfe3;
-$toggle-background-checked: #3d83df;
-
-$toggle-btn-background: white;
-$toggle-btn-background-disabled: white;
-$toggle-btn-background-checked: #3d83df;
-
-$toggle-btn-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+@import '../../css-design-tokens/component/toggle.css';
 
 .watson-toggle {
   display: flex;
@@ -19,7 +9,7 @@ $toggle-btn-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
     display: inline-block;
     width: 44px;
     height: 24px;
-    margin-right: $spacing-x-small;
+    margin-right: var(--watson-toggle-p-s);
 
     span {
       position: absolute;
@@ -28,7 +18,7 @@ $toggle-btn-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: $toggle-background;
+      background-color: var(--watson-toggle-background);
       transition: 0.4s;
       border-radius: 28px;
       pointer-events: none;
@@ -42,10 +32,10 @@ $toggle-btn-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
         width: 18px;
         left: 4px;
         top: 3px;
-        background-color: $toggle-btn-background;
+        background-color: var(--watson-toggle-btn-background);
         transition: 0.4s;
         border-radius: 50%;
-        box-shadow: $toggle-btn-shadow;
+        box-shadow: var(--watson-toggle-btn-shadow);
       }
     }
 
@@ -59,7 +49,7 @@ $toggle-btn-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
 
       &:checked {
         & + span {
-          background-color: $toggle-background-checked;
+          background-color: var(--watson-toggle-background-checked);
         }
 
         & + span:before,
@@ -68,30 +58,29 @@ $toggle-btn-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
         }
 
         &:disabled + span {
-          background-color: $toggle-background-disabled;
+          background-color: var(--watson-toggle-background-disabled);
         }
       }
 
       &:disabled {
         & + span {
           cursor: not-allowed;
-          background-color: $toggle-background-disabled;
+          background-color: var(--watson-toggle-background-disabled);
         }
 
         & + span:after {
-          background-color: $toggle-btn-background-disabled;
+          background-color: var(--watson-toggle-btn-background-disabled);
           box-shadow: none;
         }
 
         &:disabled + span {
-          background-color: $toggle-background-disabled;
+          background-color: var(--watson-toggle-background-disabled);
         }
 
         &:checked + span:after {
-          background-color: $toggle-btn-background-disabled;
+          background-color: var(--watson-toggle-btn-background-disabled);
         }
       }
     }
   }
 }
- */
