--- a/src/css-design-tokens/core/index.css
+++ b/src/css-design-tokens/core/index.css
@@ -1,4 +1,4 @@
-/* CORE
+/* Core
 
   This tier is mainly responsible for the look of the final product by defining the all values that can be used. Tokens in this tier are only used internally */
 
